fix: fixed columns HUD config, also modified preset options. Changed some Advancend Backups for Just Enough Backups